/*
 * Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.
 */

package com.campusclaw.codingagent.runtimeapi.agent;

/**
 * 根据 Agent 标识解析当前只读运行目录。
 *
 * @version [br_eCampusCore 26.0.0, 2026/08/18]
 * @since [br_eCampusCore 26.0.0]
 */
public interface AgentDirectoryResolver {
    AgentDirectorySnapshotDTO resolve(String agentId);
}
